--- a/hello2.html
+++ b/hello2.html
@@ -2,9 +2,14 @@
 <html lang='en-us'>
   <head>
     <title>Hello</title>
+    <style>
+      h1{
+        color: blue;
+      }
+    </style>
   </head>
   <body>
-    <h1 style="color: blue;">Wlecoeme fols1!!</h1>
+    <h1>Wlecoeme fols1!!</h1>
     <h2>Yooooooooooooooooooooooooooooooooooo</h2>
     Hello world!
   </body>
