--- a/hello2.html
+++ b/hello2.html
@@ -9,11 +9,7 @@
     </style>
   </head>
   <body>
-<<<<<<< HEAD
-    <h1 style="color: blue;">Wlecoeme fols1!</h1>
-=======
-    <h1>Wlecoeme fols1!!</h1>
->>>>>>> style
+    <h1>Wlecoeme fols1!</h1>
     <h2>Yooooooooooooooooooooooooooooooooooo</h2>
     Hello world!
   </body>
